🐛 fix: ensure codeblock header visibility on iOS
Scrolling touch, a glitch,
Absolute, its position,
Solved, in code's rich stitch.

--- a/sass/parts/_code.scss
+++ b/sass/parts/_code.scss
@@ -55,7 +55,6 @@ pre {
         border: 0rem;
         overflow-x: auto;
         border-radius: 5px;
-        -webkit-overflow-scrolling: touch;
 
         // Hide horizontal scrollbar
         scrollbar-width: none;
